# mss

./: .clang-format  .clang_complete  .gitignore  CMakeLists.txt  README.md
cmake/: AddExe.cmake  AddTest.cmake  FindEigen3.cmake
com/: CMakeLists.txt  com.cc
doc/: Doxyfile
example/: BEM_Solution.h  BasinHopping.py  CMakeLists.txt  ave_homo.cc  bem.cc  compute_bv.cc  energy.cc  freq.cc  holo.cc  holo_input.txt  homo.cc  homo.h  homo_ip.cc  input.txt  layers.cc  loc_scan.cc  main.cc  mat_scan.cc  mismatch.cc  mismatch.h  mss.cc  multi_bem.cc  multi_homo.cc  multiscale.cc  periodic.cc  plot_area.cc  rand_box.cc  rand_circ.cc  random.cc  single.cc
examples/: example1.txt
examples/ms_inhomo/: CMakeLists.txt  input.txt  main.cc
msvc/: main.cc  mss.sln  mss.vcxproj  mss.vcxproj.filters
msvc/tests/test_area/: test_area.vcxproj  test_area.vcxproj.filters
msvc/tests/test_assembly/: test_assembly.vcxproj  test_assembly.vcxproj.filters
msvc/tests/test_assembly_config/: test_assembly_config.vcxproj  test_assembly_config.vcxproj.filters
msvc/tests/test_boundary/: test_boundary.vcxproj  test_boundary.vcxproj.filters
msvc/tests/test_circle/: test_circle.vcxproj  test_circle.vcxproj.filters
msvc/tests/test_continuity/: test_continuity.vcxproj  test_continuity.vcxproj.filters
msvc/tests/test_cs/: test_cs.vcxproj  test_cs.vcxproj.filters
msvc/tests/test_fiber/: test_fiber.vcxproj  test_fiber.vcxproj.filters
msvc/tests/test_incident/: test_incident.vcxproj  test_incident.vcxproj.filters
msvc/tests/test_input/: test_input.vcxproj  test_input.vcxproj.filters
msvc/tests/test_line/: test_line.vcxproj  test_line.vcxproj.filters
msvc/tests/test_math/: test_math.vcxproj  test_math.vcxproj.filters
msvc/tests/test_matrix/: test_matrix.vcxproj  test_matrix.vcxproj.filters
msvc/tests/test_output/: test_output.vcxproj  test_output.vcxproj.filters
msvc/tests/test_periodic/: test_periodic.vcxproj  test_periodic.vcxproj.filters
msvc/tests/test_point/: test_point.vcxproj  test_point.vcxproj.filters
msvc/tests/test_solution/: test_solution.vcxproj  test_solution.vcxproj.filters
msvc/tests/test_state/: test_state.vcxproj  test_state.vcxproj.filters
src/: CMakeLists.txt  mss.h
src/core/: CMakeLists.txt  CS.cc  CS.h  Functors.h  Incident.h  Input.h  Integrators.h  Material.h  Math.h  Matrix.h  Modes.h  Solution.h  State.h  Tensor.h
src/incident/: Incident.h  IncidentInput.h  IncidentP.h  IncidentPlane.h  IncidentPlaneP.h  IncidentPlaneSH.h  IncidentPlaneSV.h  IncidentS.h  IncidentSV.h
src/inhomo/: .#ConfigFiber.h  .clang_complete  Assembly.h  AssemblyConfig.h  Boundary.h  CMakeLists.txt  ConfigAssembly.cc  ConfigAssembly.h  ConfigFiber.cc  ConfigFiber.h  Configuration.h  Fiber.cc  Fiber.h  FiberConfig.h  Inhomo.h  Inhomogeneity.h  Panel.h
src/input/: Input.cc  Input.h  InputData.h
src/post/: .clang-format  Continuity.h  Output.h
src/post/check/: Continuity.h
src/post/geom/: Area.h  Circle.h  Geometry.h  Line.h  Point.h  PointSet.h
src/post/geometry/: Area.h  Circle.h  GeoInput.h  Geometry.h  Line.h  Point.h  PointSet.h
src/post/output/: .clang_complete  Circle.h  Geometry.h  Line.h  Point.h
src/postproc/output/: Area.h  Geometry.h  Point.h
src/pre/: CMakeLists.txt  Input.cc  Input.h  InputData.h
src/procedures/: Procedures.h
src/tools/: FileIO.h
tests/: AddTest.cmake  CMakeLists.txt  test.h
tests/check/: CMakeLists.txt  test_continuity.cc
tests/core/: CMakeLists.txt  test_cs.cc  test_incident.cc  test_math.cc  test_matrix.cc  test_solution.cc  test_state.cc
tests/core/data/: Multiple.txt  Multiple_DFT.txt  Single.txt
tests/core/data/solution/: Multiple.txt  Single.txt
tests/core/data/state/: TestIO.txt
tests/data/: input.txt
tests/geom/: CMakeLists.txt  test_area.cc  test_circle.cc  test_line.cc  test_point.cc
tests/geometry/: CMakeLists.txt  test_area.cc  test_circle.cc  test_line.cc  test_point.cc
tests/geometry/data/: input.txt
tests/incident/: CMakeLists.txt  test_incident.cc
tests/inhomo/: CMakeLists.txt  test_array.cc  test_assembly.cc  test_assembly_config.cc  test_bem.cc  test_boundary.cc  test_expansion.cc  test_fiber.cc  test_homo.cc  test_periodic.cc
tests/inhomo/data/: Multiple.txt  Single.txt  input.txt
tests/inhomo/data/array/: input.txt
tests/inhomo/data/assembly/: Multiple.txt  Single.txt  input.txt  input2.txt
tests/inhomo/data/boundary/: input.txt
tests/inhomo/data/fiber/: input.txt
tests/inhomo/data/homo/: input.txt  input2.txt
tests/inhomo/data/periodic/: input.txt  input2.txt  input3.txt
tests/input/: .clang_complete  CMakeLists.txt  test_input.cc
tests/input/data/: input.txt  input_material.txt  output.txt
tests/output/: CMakeLists.txt  test_output.cc  test_point.cc
tools/matlab/: check_ev.m  precond.m  read_complex.m  z1adj.m  z1adj_geomean.m  z1adj_mean.m  z2adj.m  z2adj_geomean.m  z2adj_mean.m  z2pinv.m
tools/matlab/random/: add.m  add_fibers.m  boundary.m  cost_function.m  edge_nodes.m  main.m  map_feature.m  plot_fibers.m
tools/python/: mss_plot.py
